[workspace.package]
rust-version = "1.75"
edition = "2021"
version = "0.0.1"
license = "Apache-2.0"
authors = [
    "Barnaby Dalton <barnaby@daltonsgate.com>"
]

[workspace]
resolver = "2"
members = [
    "bsv-parser",
]

[workspace.dependencies]
anyhow = { version = "1.0.79" }
lsp-types = { version = "0.95.0" }
thiserror = { version = "1.0.56 " }
tokio = { version = "1.36.0" }
url = { version = "2.5.0" }
