[package]
name = "bsv-parser"
description = "A hand-written, fault-tolerant, recursive descent parser for the Bluespec SystemVerilog language."

rust-version.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-types = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
